# calibcv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
calibResults/: LifeCam_asymmetric_circles_calibration.yaml  LifeCam_chess_calibration.yaml  LifeCam_rings_calibration.yaml  PS3_asymmetric_circles_calibration.yaml  PS3_chess_calibration.yaml  PS3_rings_calibration.yaml  calibration_test_concentric_1.yaml  calibration_test_concentric_2_1.yaml  calibration_test_concentric_3_1.yaml  calibration_test_concentric_4.yaml
calibration/: CMakeLists.txt  calibrationBaseDetector.cpp  calibrationBaseDetector.h  calibrationCommon.h  calibrationInterface.cpp  calibrationInterface.h  calibrationPatternChessboard.h  calibrationPatternCircleGridAsymmetric.h  calibrationPatternCircleGridSymmetric.h  calibrationPatternConcentric.h  calibrationPatternConcentricImpl.cpp  calibrationPatternConcentricImpl.h  calibrationPatternConcentricUtils.cpp  calibrationPatternConcentricUtils.h  calibrationPatternUtils.cpp  calibrationPatternUtils.h  calibrationTool.h  calibrationViz.h
calibration/chessboard/: calibrationPatternChessboard.cpp  calibrationPatternChessboard.h  calibrationPatternChessboardImpl.cpp  calibrationPatternChessboardImpl.h
calibration/circleGridAsymmetric/: calibrationPatternCircleGridAsymmetric.cpp  calibrationPatternCircleGridAsymmetric.h  calibrationPatternCircleGridAsymmetricImpl.cpp  calibrationPatternCircleGridAsymmetricImpl.h
calibration/circleGridSymmetric/: calibrationPatternCircleGridSymmetric.cpp  calibrationPatternCircleGridSymmetric.h  calibrationPatternCircleGridSymmetricImpl.cpp  calibrationPatternCircleGridSymmetricImpl.h
calibration/concentric/: calibrationPatternConcentric.cpp  calibrationPatternConcentric.h  calibrationPatternConcentricImpl.cpp  calibrationPatternConcentricImpl.h
dyrson11/: CMakeLists.txt  CUtils.h  testContours.cpp
engine/: CMakeLists.txt  Common.h
engine/include/: SComputingPipeline.h  SComputingStage.h  SThreadedVideoHandler.h  SUtils.h  SVideoHandler.h  SVideoHandlerPSEye.h  bp.h
engine/include/panels/: SPatternDetectorPanel.h
engine/include/pipelines/: SPatternDetectorPipeline.h
engine/include/stages/: SComputingStageEdges.h  SComputingStageEllipses.h  SComputingStageFeatures.h  SComputingStageLightCompensation.h  SComputingStageMasking.h  SComputingStageTracking.h
engine/src/: SComputingPipeline.cpp  SComputingStage.cpp  SUtils.cpp  SVideoHandler.cpp  SVideoHandlerPSEye.cpp
engine/src/panels/: SPatterDetectionPanel.cpp  SPatternDetectionPanel.cpp
engine/src/pipelines/: SPatternDetectorPipeline.cpp
engine/src/stages/: SComputingStageEdges.cpp  SComputingStageEllipses.cpp  SComputingStageFeatures.cpp  SComputingStageLightCompensation.cpp  SComputingStageMasking.cpp  SComputingStageTracking.cpp
ext/: CMakeLists.txt
ext/mauro/: CMakeLists.txt
ext/mauro/lib/include/: MCommon.h  MConfig.h  MPlotter.h  MWindow.h  MWindowManager.h
ext/mauro/lib/src/: MCommon.cpp  MWindow.cpp  MWindowManager.cpp
ext/mauro/tests/: testWindows.cpp
legacy/dyrson11/: CDetectionPanel.cpp  CDetectionPipeline.cpp  CMakeLists.txt  testCapture.cpp  testThresholding.cpp
legacy/dyrson11/dyrson11/: CCommon.h  CDetectionPanel.h  CDetectionPipeline.h  CMakeLists.txt
legacy/wpumacay/: CDetectionPipeline.cpp  CTuning.h  CUtils.cpp  testCapture.cpp  thresholdingParams.txt
reports/: plots.py  plots_colinearity.py  plots_colinearity_lifecam.py  plots_lifecam.py  report1.tex  report2.tex  report3.tex  report4.blg  report4.fdb_latexmk  report4.fls  report4.tex
res/: .gitignore  get_calib_files.sh  get_calib_files_windows.bat
res/calibrationConfig/: config_asymmetric_circles.yaml  config_chessboard.yaml  config_rings.yaml
res/calibrationData/lifecam/asymmetric_lifecam_20/: lifecam_asymmetric_circles_calibration_20.yaml  lifecam_asymmetric_circles_calibration_20_iterations_results.txt
res/calibrationData/lifecam/asymmetric_lifecam_30/: lifecam_asymmetric_circles_calibration_30.yaml  lifecam_asymmetric_circles_calibration_30_iterations_results.txt
res/calibrationData/lifecam/asymmetric_lifecam_40/: lifecam_asymmetric_circles_calibration_40.yaml  lifecam_asymmetric_circles_calibration_40_iterations_results.txt
res/calibrationData/lifecam/asymmetric_lifecam_50/: lifecam_asymmetric_circles_calibration_50.yaml  lifecam_asymmetric_circles_calibration_50_iterations_results.txt
res/calibrationData/lifecam/chessboard_lifecam_20/: lifecam_chess_calibration_20.yaml  lifecam_chess_calibration_20_iterations_results.txt
res/calibrationData/lifecam/chessboard_lifecam_30/: lifecam_chess_calibration_30.yaml  lifecam_chess_calibration_30_iterations_results.txt
res/calibrationData/lifecam/chessboard_lifecam_40/: lifecam_chess_calibration_40.yaml  lifecam_chess_calibration_40_iterations_results.txt
res/calibrationData/lifecam/chessboard_lifecam_50/: lifecam_chess_calibration_50.yaml  lifecam_chess_calibration_50_iterations_results.txt
res/calibrationData/lifecam/rings_lifecam_20/: lifecam_rings_calibration_20.yaml  (+1 more)
tests/: .gitignore  CMakeLists.txt  testCalibrationBatchAutoRefinement.cpp  testCalibratorBatchManual.cpp  testCalibratorBatchManual.txt  testCvCalibration.cpp  testCvDetection.cpp  testCvSimpleCalibration.cpp  testCvSingleRefinment.cpp  testFrontoParallelParameters.cpp  testGLsupport.cpp  testLightCompensation.cpp  testPipeline.cpp  testPipeline2  testPipelinePS3.cpp  testPipelineVideo.cpp  testVideoCalibration.cpp  testVideoHandler.cpp  testVideoHandlerPSEye.cpp
tests/calibration/: calibrationCommon.h  calibrationInterface.h  calibrationPatternChessboard.h  calibrationPatternCircleGridAsymmetric.h  calibrationPatternCircleGridSymmetric.h
tests/old/: testPipeline.cpp  testPipelinePS3.cpp  testPipelineVideo.cpp  testVideoCalibration.cpp  testVideoHandlerPSEye.cpp
wpumacay/: CCommon.h  CContourFinder.h  CDetectionPanel.cpp  CDetectionPanel.h  CDetectionPipeline.cpp  CDetectionPipeline.h  CMakeLists.txt  CTuning.cpp  CTuning.h  CUtils.cpp  CUtils.h  testCapture.cpp  testContours.cpp  testThresholding.cpp  thresholdingParams.txt
(+881 files in other folders)
